@@ -61,8 +61,10 @@ VERSION 2.2.2
     * Improved automatic resizing of lyrics and suggestions in the context applet.
 
   BUGFIXES:
+    * Fixed videoclip applet going blank when switching from one video to 
+      another. (BR 210332)
     * Fixed dailymotion video file direct link retrieving not working.
-    * Fixed wikipedia engine not parsing correctly URL containing ":" (BR 209397)
+    * Fixed wikipedia engine not parsing correctly URL containing ":". (BR 209397)
     * Fixed several issues with loading and saving timecode tracks to and from
       playlists.
     * Fixed crash when copying tracks to MP3tunes music locker. (BR 214686)
